# cors404axumtest1

./: Cargo.toml  README.md
src/: main.rs
